Fixed width of site and spacing of blog posts

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,8 @@
 .App {
-
-  max-width: 80%;
+  height: 100vh;
+  max-width: 1600px;
   margin: auto;
+  background-color:white;
 }
 
 .App-logo {
