--- a/src/Containers/Posts/Posts.module.css
+++ b/src/Containers/Posts/Posts.module.css
@@ -1,6 +1,7 @@
 .Posts {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   margin: auto;
+  width: auto;
 }
