--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,5 +1,4 @@
 .Logo {
-  padding: 8px;
   height: 100%;
   box-sizing: border-box;
   margin-right: 25px;
