--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -1,6 +1,6 @@
 .Toolbar {
-  width: 100%;
-  position: fixed;
+  max-width: 1600px;
+
   top: 0;
   left: 0;
   background-color: #161616;
@@ -10,7 +10,7 @@
 }
 
 .ToolbarWidth {
-  width: 84%;
+  width: 100%;
   margin: auto;
   height: 56px;
   display: flex;
