--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -1,5 +1,5 @@
 .Post {
-  width: 350px;
+  min-width: 350px;
   padding: 16px;
   text-align: center;
   border: 1px solid #eee;
@@ -12,6 +12,7 @@
 
 a {
   text-decoration: none;
+  flex-grow: 1;
 }
 
 .Post:hover,
