--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.4rem;
+  height: 100vh;
 }
 
 code {
@@ -11,5 +12,9 @@ code {
     monospace;
 }
 
-html { font-size: 62.5%; } 
+html { 
+  font-size: 62.5%; 
+  background-color: #e8e8e8;
+} 
+
 h1 { font-size: 2.4rem; } 
